Allow disable of queuename decoding
An earlier change introduced a bug when queue names contained plus signs, when decoding, these would be converted to spaces.

This doesn't directly address this bug, but instead it allows the disabling of the decoding mechanism.