@@ -19,7 +19,6 @@ import org.swisspush.redisques.util.RedisquesConfiguration;
 import org.swisspush.redisques.util.Result;
 import org.swisspush.redisques.util.StatusCode;
 
-import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -51,6 +50,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
 
     private final String redisquesAddress;
     private final String userHeader;
+    private final boolean enableQueueNameDecoding;
 
     public static void init(Vertx vertx, RedisquesConfiguration modConfig) {
         log.info("Enable http request handler: " + modConfig.getHttpRequestHandlerEnabled());
@@ -77,6 +77,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
         this.eventBus = vertx.eventBus();
         this.redisquesAddress = modConfig.getAddress();
         this.userHeader = modConfig.getHttpRequestHandlerUserHeader();
+        this.enableQueueNameDecoding = modConfig.getEnableQueueNameDecoding();
 
         final String prefix = modConfig.getHttpRequestHandlerPrefix();
 
@@ -205,7 +206,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void enqueueOrLockedEnqueue(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(
                 queue -> ctx.request().bodyHandler(buffer -> {
                     try {
                         String strBuffer = encodePayload(buffer.toString());
@@ -259,7 +260,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void addLock(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(
                 queue -> eventBus.send(redisquesAddress, buildPutLockOperation(queue, extractUser(ctx.request())),
                         (Handler<AsyncResult<Message<JsonObject>>>) reply -> {
                             if (reply.failed()) {
@@ -273,7 +274,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void getSingleLock(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(
                 queue -> eventBus.send(redisquesAddress, buildGetLockOperation(queue), (Handler<AsyncResult<Message<JsonObject>>>) reply -> {
                     final HttpServerResponse response = ctx.response();
                     if (reply.failed()) {
@@ -291,18 +292,16 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
                 }));
     }
 
-    private Optional<String> decodedQueueNameOrRespondWithBadRequest(RoutingContext ctx, String encodedQueueName) {
-        try {
-            return Optional.of(java.net.URLDecoder.decode(encodedQueueName, StandardCharsets.UTF_8.name()));
-        } catch (UnsupportedEncodingException ex) {
-            // not going to happen - value came from JDK's own StandardCharsets
-            respondWith(StatusCode.BAD_REQUEST, ex.getMessage(), ctx.request());
-            return Optional.empty();
+    private Optional<String> decodedQueueNameOrRespondWithBadRequest(String encodedQueueName) {
+        if (enableQueueNameDecoding) {
+            return Optional.of(java.net.URLDecoder.decode(encodedQueueName, StandardCharsets.UTF_8));
+        } else {
+            return Optional.of(encodedQueueName);
         }
     }
 
     private void deleteSingleLock(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(
                 queue -> eventBus.send(redisquesAddress, buildDeleteLockOperation(queue),
                         (Handler<AsyncResult<Message<JsonObject>>>) reply -> {
                             if (reply.failed()) {
@@ -385,7 +384,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void getQueueItemsCount(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(queue ->
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(queue ->
                 eventBus.send(redisquesAddress, buildGetQueueItemsCountOperation(queue), (Handler<AsyncResult<Message<JsonObject>>>) reply -> {
                     if (reply.failed()) {
                         log.warn("Failed to getQueueItemsCount", reply.cause());
@@ -522,7 +521,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void listQueueItems(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(ctx.request().path())).ifPresent(queue -> {
+        decodedQueueNameOrRespondWithBadRequest(lastPart(ctx.request().path())).ifPresent(queue -> {
             String limitParam = null;
             if (ctx.request() != null && ctx.request().params().contains(LIMIT)) {
                 limitParam = ctx.request().params().get(LIMIT);
@@ -552,7 +551,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
     }
 
     private void addQueueItem(RoutingContext ctx) {
-        decodedQueueNameOrRespondWithBadRequest(ctx, part(ctx.request().path(), 1)).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(part(ctx.request().path(), 1)).ifPresent(
                 queue -> ctx.request().bodyHandler(buffer -> {
                     try {
                         String strBuffer = encodePayload(buffer.toString());
@@ -573,7 +572,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
 
     private void getSingleQueueItem(RoutingContext ctx) {
         final String requestPath = ctx.request().path();
-        decodedQueueNameOrRespondWithBadRequest(ctx, lastPart(requestPath.substring(0, requestPath.length() - 2))).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(lastPart(requestPath.substring(0, requestPath.length() - 2))).ifPresent(
                 queue -> {
                     final int index = Integer.parseInt(lastPart(requestPath));
                     eventBus.send(redisquesAddress, buildGetQueueItemOperation(queue, index), (Handler<AsyncResult<Message<JsonObject>>>) reply -> {
@@ -597,7 +596,7 @@ public class RedisquesHttpRequestHandler implements Handler<HttpServerRequest> {
 
     private void replaceSingleQueueItem(RoutingContext ctx) {
         final HttpServerRequest request = ctx.request();
-        decodedQueueNameOrRespondWithBadRequest(ctx, part(request.path(), 2)).ifPresent(
+        decodedQueueNameOrRespondWithBadRequest(part(request.path(), 2)).ifPresent(
                 queue -> checkLocked(queue, request, voidEvent -> {
                     final int index = Integer.parseInt(lastPart(request.path()));
                     request.bodyHandler(buffer -> {
